iac/vpc/vpc.tf
# Crear una VPC
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "main-vpc"
  }
}

# Crear dos subredes públicas
resource "aws_subnet" "public_subnet_1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-2a"
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet-1"
  }
}

# Crear un Security Group para la Lambda
resource "aws_security_group" "lambda_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "lambda-security-group"
  }
}

output "public_subnet_1_id" {
  value = aws_subnet.public_subnet_1.id
  description = "The ID of the public subnet 1"
}

# Output del ID del Security Group
output "lambda_sg_id" {
  value = aws_security_group.lambda_sg.id
  description = "The ID of the Lambda Security Group"
}
